--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app recipe food daily"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/favicon.ico" />
+    <script src="https://kit.fontawesome.com/c481b1d4d8.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/7e0b075d33.js" crossorigin="anonymous"></script> <!--mio-->
     <title>Volko's Food</title>
   </head>
   <body>
